:bug: bug(forms.scss): Fixed bug in form-group where right side label is not behind the input

--- a/src/core/forms.scss
+++ b/src/core/forms.scss
@@ -333,6 +333,7 @@ label {
             border-top-left-radius: 0 !important;
             border-bottom-left-radius: 0 !important;
             margin-left: -0.1rem;
+            z-index: 0;
         }
     }
 
